--- a/WebService/src/main/resources/views/init_company.html
+++ b/WebService/src/main/resources/views/init_company.html
@@ -9,7 +9,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <title>完善公司信息 | java110</title>
+    <title>完善公司信息 | 精诚物业服务有限公司</title>
     <vc:create name="commonTop"></vc:create>
     <link href="/css/plugins/steps/jquery.steps.css" rel="stylesheet"/>
 
