--- a/WebService/src/main/resources/components/inspectionRoutePackage/choose-inspectionRoute/chooseInspectionRoute.html
+++ b/WebService/src/main/resources/components/inspectionRoutePackage/choose-inspectionRoute/chooseInspectionRoute.html
@@ -1,4 +1,5 @@
-<div id = "chooseInspectionRouteModel" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="chooseInspectionRouteModelLabel" aria-hidden="true" >
+<div id="chooseInspectionRouteModel" class="modal fade" tabindex="-1" role="dialog"
+     aria-labelledby="chooseInspectionRouteModelLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
@@ -17,9 +18,12 @@
                                 </div>
                                 <div class="col-sm-5">
                                     <div class="input-group">
-                                        <input placeholder="输入巡检路线名称" type="text" v-model="chooseInspectionRouteInfo._currentInspectionRouteName" class="form-control form-control-sm">
+                                        <input placeholder="输入巡检路线名称" type="text"
+                                               v-model="chooseInspectionRouteInfo._currentInspectionRouteName"
+                                               class="form-control form-control-sm">
                                         <span class="input-group-append">
-                                                <button type="button" class="btn btn-sm btn-primary" v-on:click="queryInspectionRoutes()">查询</button>
+                                                <button type="button" class="btn btn-sm btn-primary"
+                                                        v-on:click="queryInspectionRoutes()">查询</button>
                                             </span>
                                     </div>
                                 </div>
@@ -27,30 +31,32 @@
                             <div class="table-responsive" style="margin-top:15px">
                                 <table class="table table-striped">
                                     <thead>
-                                        <tr>
-                                                                        <th class="text-center">inspectionRouteId</th>
-                            <th class="text-center">路线名称</th>
-                            <th class="text-center">巡检点</th>
-                            <th class="text-center">设备数量</th>
-                            <th class="text-center">检查项数量</th>
-                            <th class="text-center">备注</th>
-                            <th class="text-center">操作</th>
+                                    <tr>
+                                        <th class="text-center">inspectionRouteId</th>
+                                        <th class="text-center">路线名称</th>
+                                        <th class="text-center">巡检点</th>
+                                        <th class="text-center">设备数量</th>
+                                        <th class="text-center">检查项数量</th>
+                                        <th class="text-center">备注</th>
+                                        <th class="text-center">操作</th>
 
-                                        </tr>
+                                    </tr>
                                     </thead>
                                     <tbody>
-                                        <tr v-for="inspectionRoute in chooseInspectionRouteInfo.inspectionRoutes">
-                                                                        <td class="text-center">{{inspectionRoute.configId}}</td>
-                            <td class="text-center">{{inspectionRoute.routeName}}</td>
-                            <td class="text-center">{{inspectionRoute.inspectionName}}</td>
-                            <td class="text-center">{{inspectionRoute.machineQuantity}}</td>
-                            <td class="text-center">{{inspectionRoute.checkQuantity}}</td>
-                            <td class="text-center">{{inspectionRoute.remark}}</td>
+                                    <tr v-for="inspectionRoute in chooseInspectionRouteInfo.inspectionRoutes">
+                                        <td class="text-center">{{inspectionRoute.configId}}</td>
+                                        <td class="text-center">{{inspectionRoute.routeName}}</td>
+                                        <td class="text-center">{{inspectionRoute.inspectionName}}</td>
+                                        <td class="text-center">{{inspectionRoute.machineQuantity}}</td>
+                                        <td class="text-center">{{inspectionRoute.checkQuantity}}</td>
+                                        <td class="text-center">{{inspectionRoute.remark}}</td>
 
-                                            <td>
-                                                <button class="btn btn-primary btn-xs" v-on:click="chooseInspectionRoute(inspectionRoute)">选择</button>
-                                            </td>
-                                        </tr>
+                                        <td>
+                                            <button class="btn btn-primary btn-xs"
+                                                    v-on:click="chooseInspectionRoute(inspectionRoute)">选择
+                                            </button>
+                                        </td>
+                                    </tr>
                                     </tbody>
                                 </table>
                             </div>
