添加富文本编辑器

--- a/WebService/src/main/resources/components/indexPackage/index-context/indexContext.html
+++ b/WebService/src/main/resources/components/indexPackage/index-context/indexContext.html
@@ -40,7 +40,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-3">
+        <!--<div class="col-lg-3">
             <div class="ibox ">
                 <div class="ibox-title">
                     <span class="label label-danger float-right">总数</span>
@@ -52,9 +52,9 @@
                     <small>空闲</small>
                 </div>
             </div>
-        </div>
+        </div>-->
     </div>
 
-    <vc:create name="indexArrears"></vc:create>
+    <!--<vc:create name="indexArrears"></vc:create>-->
 
 </div>
