--- a/WebService/src/main/resources/components/pageFramePackage/common/commonTop.html
+++ b/WebService/src/main/resources/components/pageFramePackage/common/commonTop.html
@@ -1,3 +1,4 @@
+<link crossorigin="anonymous" integrity="sha384-OYF2qVjT+uoSm9C9s2RPqTw+8yyXYIylhAXea/DdhadXUSYpHfqQm+iq/IznjlF6" href="https://lib.baomitu.com/wangEditor/3.1.1/wangEditor.min.css" rel="stylesheet">
 <link rel="stylesheet" href="/css/bootstrap/bootstrap.min.css"/>
 <link href="/font-awesome/css/font-awesome.css" rel="stylesheet"/>
 <!-- Toastr style -->
@@ -10,6 +11,7 @@
 <link rel="stylesheet" href="/css/common.css"/>
 <link rel="stylesheet" href="/css/bootstrap/bootstrap-datetimepicker.min.css"/>
 
+<script crossorigin="anonymous" integrity="sha384-uOV94oddoQmmdQhRtBPzXMX7CBxGVw888Cp9gjgRspAq/go5oea3c+cS8OlY+N6C" src="https://lib.baomitu.com/wangEditor/3.1.1/wangEditor.min.js"></script>
 <script src="/js/bootstrap/jquery-3.3.1.min.js"></script>
 <script src="/js/vue/vue.min.js" ></script>
 <script src="/js/vue/vue-resource.min.js" ></script>
