--- a/WebService/src/main/resources/components/ownerPackage/list-owner-member/listOwnerMember.html
+++ b/WebService/src/main/resources/components/ownerPackage/list-owner-member/listOwnerMember.html
@@ -5,7 +5,11 @@
             <div class="ibox">
                 <div class="ibox-content">
 
-                    <table class="footable table table-stripped toggle-arrow-tiny" data-page-size="15">
+                    <table class="footable table table-stripped toggle-arrow-tiny" data-page-size="15"
+
+
+
+                    >
                         <thead>
                         <tr>
                             <th>成员ID</th>
