--- a/WebService/src/main/resources/components/mallManagePackage/view-commodity-modal/viewCommodityModal.html
+++ b/WebService/src/main/resources/components/mallManagePackage/view-commodity-modal/viewCommodityModal.html
@@ -1,11 +1,52 @@
 <div id="viewCommodityModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="row">
-        <div class="col-sm-5">
-                图片轮播
-        </div>
-        <div class="col-sm-7">
-            商品介绍
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-sm-5">
+                        <div id="demo" class="carousel slide" data-ride="carousel">
+                            <!-- 指示符 -->
+                            <ul class="carousel-indicators">
+                                <li data-target="#demo" data-slide-to="0" class="active"></li>
+                                <li data-target="#demo" data-slide-to="1"></li>
+                                <li data-target="#demo" data-slide-to="2"></li>
+                            </ul>
+
+                            <!-- 轮播图片 -->
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="https://static.runoob.com/images/mix/img_fjords_wide.jpg">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="https://static.runoob.com/images/mix/img_nature_wide.jpg">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="https://static.runoob.com/images/mix/img_mountains_wide.jpg">
+                                </div>
+                            </div>
+                            <!-- 左右切换按钮 -->
+                            <a class="carousel-control-prev" href="#demo" data-slide="prev">
+                                <span class="carousel-control-prev-icon"></span>
+                            </a>
+                            <a class="carousel-control-next" href="#demo" data-slide="next">
+                                <span class="carousel-control-next-icon"></span>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-sm-7">
+                        <div>
+                            <span>￥0.5</span>
+                            <span>原价:100</span>
+                        </div>
+                        <div>
+                            车厘子XXXXXXXXXXXXXXXX
+                        </div>
+                        <div>
+                            富文本展示区域
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-
 </div>
