--- a/WebService/src/main/resources/components/ownerPackage/edit-owner/editOwner.html
+++ b/WebService/src/main/resources/components/ownerPackage/edit-owner/editOwner.html
@@ -60,12 +60,17 @@
                                 <div class="col-sm-10"><input v-model="editOwnerInfo.link" type="number"
                                                               placeholder="必填，请填写联系方式" class="form-control"></div>
                             </div>
-                            <!-- TODO: 公司地址未设置v-model -->
                             <div class="form-group row">
-                                <label class="col-sm-2 col-form-label">公司地址</label>
-                                <div class="col-sm-10"><input v-model="editOwnerInfo.xxx" type="number"
-                                                              placeholder="请填写公司地址" class="form-control"></div>
+                                <label class="col-sm-2 col-form-label">公司楼层</label>
+                                <div class="col-sm-10"><input v-model="editOwnerInfo.companyFloor" type="text"
+                                                              placeholder="请填写公司楼层" class="form-control"></div>
                             </div>
+                            <div class="form-group row">
+                                <label class="col-sm-2 col-form-label">公司名称</label>
+                                <div class="col-sm-10"><input v-model="editOwnerInfo.companyName" type="text"
+                                                              placeholder="请填写公司名称" class="form-control"></div>
+                            </div>
+
                             <div class="form-group row">
                                 <label class="col-sm-2 col-form-label">备注</label>
                                 <div class="col-sm-10"><input v-model="editOwnerInfo.remark" type="tel"
