--- a/WebService/src/main/resources/views/mallManageFlow.html
+++ b/WebService/src/main/resources/views/mallManageFlow.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>福利商城</title>
+    <link rel="stylesheet" href="/css/component/mallManage.css">
     <vc:create name="commonTop"></vc:create>
 </head>
 <body>
